monitoring/controllers/grafana/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: apps
      namespace: gateways
      sectionName: https
  hostnames:
    - grafana.home.dokocloud.net
  rules:
    - backendRefs:
        - name: grafana
          port: 80
